Основная страница промо с девушкой на фото

--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body {
   position: absolute;
   height: 100%;
   width: 100%;
-  background-image: url("man.jpg");
+  background-image: url("woman.jpg");
   background-repeat: no-repeat;
   background-position: right;
   background-size: contain;
