--- a/index.css
+++ b/index.css
@@ -41,6 +41,7 @@ body {
   background-repeat: no-repeat;
   background-position: right;
   background-size: contain;
+  box-shadow: -20px 0 80px 45px rgb(0 0 0) inset;
 }
 .promo__shadow {
   position: absolute;
